Fixed problems about methods isAssignableFrom of schemas In AggregateSchema added information of elements type